--- a/css/style.css
+++ b/css/style.css
@@ -313,11 +313,13 @@ main{
     height: 50vw;
     object-fit: cover;
     object-position: center;
-    margin: 0 auto;
+   
     
 }
 
-
+.m-0a{
+     margin: 0 auto;
+}
 
 
 
