--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ body{
     font-family: 'PT Sans', sans-serif;
 }
 
-
+section{
+    scroll-margin-bottom: 70px;
+}
 
 
 
@@ -131,8 +133,13 @@ ul{
     color: var(--white);
 }
 
+
+.purpl-txt{
+    color: var(--light-purple);
+}
+
 .txt-interli{
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
 .icon-big{
@@ -155,6 +162,61 @@ ul{
 
 .ovf{
     overflow: hidden;
+}
+
+#features p{
+    font-size: .8rem;
+}
+
+#planning .container p:last-child{
+    font-size: 0.8rem;
+}
+
+
+#planning .container .card p{
+    font-style: italic;
+    
+}
+
+#testimonials .container h3{
+    font-weight: 300;
+    font-size: 1rem;
+}
+
+#testimonials .container .card h3{
+
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+
+}
+
+#testimonials .container h2{
+    font-size: 2rem;
+}
+
+
+.upcase{
+    text-transform: uppercase;
+}
+
+.fa-quote-right, .fa-quote-left{
+    padding: 0 5px;
+}
+
+#benefits .container h2:first-child{
+    font-size: 1.9rem;
+}
+
+#benefits .container h4{
+    font-size: 3rem;
+}
+
+
+#benefits p{
+    font-size: .9rem;
+    line-height: 1.5rem;
+    padding-bottom: 20px;
 }
 
 
@@ -230,9 +292,10 @@ ul{
 
 
 .feat-btn{
-    padding: 10px 60px;
-    background-color: var(--light-blue);        /* bottone da sistemare */
+    padding: 7px 60px;
+    background-color: var(--light-blue);       
     color: var(--white);
+    letter-spacing: 2px;
 
 }
 
@@ -242,7 +305,7 @@ ul{
     height: 50px;
     background-color: var(--light-purple);
     border-radius: 50%;
-    margin: 30px auto;
+    margin: 30px auto 0 auto;
     
 }
 
@@ -250,7 +313,19 @@ ul{
     padding:20px 0;
 }
 
+.fa-apple{
+    padding: 5px;
+}
 
+
+.bene-btn{
+    padding: 8px 50px;
+    background-color: var(--light-purple);
+    color: var(--white);
+    text-decoration: none;
+    border-radius: 30px;
+    letter-spacing: 2px;
+}
 
 
 
@@ -309,12 +384,20 @@ main{
 
 
 .round-img{
-    width: 50vw;
-    height: 50vw;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     object-position: center;
    
-    
+}
+
+
+.round-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+
 }
 
 .m-0a{
