--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ footer p{
 
 
 
+
+
+
 /* flex */
 
 .d-flex{
@@ -431,8 +434,6 @@ header nav a{
 header img{
     width:70px;
 }
-
-
 
 
 
@@ -597,9 +598,55 @@ footer{
     #benefits .container h2:first-child{
         font-size: 2.5rem;
     }
+
+    #features .container .card img{
+        width: 60%;
+    }
 }
 
 
+@media screen and (min-width:992px){
+    
+    .container{
+        max-width: 940px;
+        margin: 0 auto;
+        padding: 15px 0;
+    }
+
+    /* #features .container .card img{
+        width: 80%;
+    }
+ */
+    .fa-bars{
+        display: none;
+    }
+
+    header ul{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
+    header a{
+        text-decoration: none;
+        padding: 0 15px;
+    }
 
 
 
+    .small-txt{
+        font-size: .9rem;
+    }
+    
+
+    .nav-btn{
+        padding: 7px 20px;
+        border-radius: 20px;
+        background-color: var(--white);
+        color: var(--black);
+        margin-left: 10px;
+    }
+
+
+
+}
